<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/txtFirmCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firmCode"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:text="200001"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtCitizenshipNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/citizenshipNumber"
        android:inputType="numberDecimal"
        android:maxLength="11"
        android:text="68368238442"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:text="1111aaaa"
        android:textAlignment="center"
        android:textSize="30sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rememberMe" />

        <RadioButton
            android:id="@+id/rbAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autoLogin" />

    </RadioGroup>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/login"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textSize="20sp" />

</LinearLayout>
